Changelog
=========

Release 0.10.1
--------------
* Added MailHandler (requires eml_parser see doc for more informations)
  NOTE: the Attribute is not associated to any object.
* One can create objects inside handlers along their attributes

Release 0.10.0
--------------
* Global views for unpublished events and one for events with proposals
* Add event jumps now directly into the event
* Added a publish button
* Fixed bugs in FileHandler

Release 0.9.5
-------------
* REST API keeps track of the originating source and the sender
* Interface for attribute buttons
* uuid for attributes

Release 0.9.4
-------------
* Maintenance supports correction of checksums
* Interface for Tab creations
* Fixed encoding issues
* Editable Attributes

Release 0.9.3
-------------
* Changes in search engine
* Rest supports a flag to make relations or not
* Unicode fix
* Maintenance tools

Release 0.9.2
-------------
* Added edit button in validation area
* Search in REST API support operators
* Changes in regex of hostname attribute definition

Release 0.9.1
-------------
* Optimization in relation generation
* Changes in DB
* Event title added to Event tab
* Changed behavior of Textareas (May be considered as BugFix)

Release 0.9.0
-------------
* External link for events
* Improved layout
* Multiple edit
* Proposal mechanism

Release 0.8.0
-------------
* Add more examples to explain implementation
* Update entry point example
* Mail support
* Authentication of users

Release 0.7.0
-------------
* Reorganize files/source for a "better" comprehension

Release 0.4.0
-------------
* REST Api
* New protection system
* Supports SQLLite

Release 0.3.0
-------------
* Search operators like "=" "<" ">" "like"
* After Adding jump to added object/attribute
* Relations are just created when it is defined to do so
* Relations are not made when they exists or if they belong to the event itself
* CB Value attribute handler

Release 0.2.0
-------------
* Detect relations
* File adding