@@ -1,5 +1,82 @@
 <%namespace name="messages_and_text" file="/dagr/components/messagesAndText.html"/>
 
+<%
+#sort results
+events = list()
+others = list()
+
+for result in results:
+  if result.__class__.__name__ == 'Event':
+    events.append(result)
+  else:
+    others.append(result)
+%>
+%if events:
+<h3>Found ${len(events)} matches in Events </h3>
+<div style="margin-bottom:35px">
+  <table class="table table-striped table-bordered table-hover table-condensed" id="searchEventsTable">
+  <thead>
+    <tr>
+    <th caria-controls="searchEventsTable" tabindex="0" role="columnheader" class="sorting">#</th>
+    <th caria-controls="searchEventsTable" tabindex="1" role="columnheader" class="sorting">Title</th>
+    <th caria-controls="searchEventsTable" tabindex="2" role="columnheader" class="sorting">Analysis</th>
+    <th caria-controls="searchEventsTable" tabindex="3" role="columnheader" class="sorting">Risk</th>
+    <th caria-controls="searchEventsTable" tabindex="4" role="columnheader" class="sorting">Status</th>
+    <th caria-controls="searchEventsTable" tabindex="5" role="columnheader" class="sorting">TLP</th>
+    <th caria-controls="searchEventsTable" tabindex="6" role="columnheader" class="sorting">Creator group</th>
+    <th caria-controls="searchEventsTable" tabindex="7" role="columnheader" class="sorting">Creation date</th>
+    <th caria-controls="searchEventsTable" tabindex="8" role="columnheader" class="sorting">Options</th>
+    </tr>
+  </thead>
+  <tbody>
+  %for event in events:
+    <%
+    if event.published == 0:
+      style = 'background-color: #ff0000;'
+    else:
+      style = ''
+    %>
+    <tr>
+      <td style="${style} cursor: pointer;" onclick="loadNewSideNavTab('${event.identifier}', '${tab_id}', '${url}/${event.identifier}', false, 'Event #${event.identifier} - ${messages_and_text.object_to_html(event.title,shorten_to=100,use_plain_text=False,remove_if_escape=True)}');"><%call expr="messages_and_text.object_to_html(event.identifier, shorten_to=100,use_plain_text=False)"/></td>
+      <td><%call expr="messages_and_text.object_to_html(event.title, shorten_to=100,use_plain_text=False)"/></td>
+      <td><%call expr="messages_and_text.object_to_html(event.analysis, shorten_to=100,use_plain_text=False)"/></td>
+      <td><%call expr="messages_and_text.object_to_html(event.risk, shorten_to=100,use_plain_text=False)"/></td>
+      <td><%call expr="messages_and_text.object_to_html(event.status, shorten_to=100,use_plain_text=False)"/></td>
+      <td style="background-color: ${event.tlp.color}"><%call expr="messages_and_text.object_to_html(event.tlp.text, shorten_to=100,use_plain_text=False)"/></td>
+      <td><%call expr="messages_and_text.object_to_html(event.creator_group.name, shorten_to=100,use_plain_text=False)"/></td>
+      <td><%call expr="messages_and_text.object_to_html(event.created, shorten_to=100,use_plain_text=False)"/></td>
+      <td style="width: 60px;">
+        <a href="#" onclick="loadNewSideNavTab('${event.identifier}', '${tab_id}', '${url}/${event.identifier}', true, 'Event #${event.identifier} - ${messages_and_text.object_to_html(event.title,shorten_to=100,use_plain_text=False,remove_if_escape=True)}');">
+           <span class="glyphicon glyphicon-eye-open" title="View event"></span>
+        </a>
+      </td>
+    </tr>
+  %endfor
+  </tbody>
+  </table>
+</div>
+
+<script type="text/javascript">
+  jQuery.fn.dataTableExt.oSort['string-case-asc']  = function(x,y) {
+    return ((x < y) ? -1 : ((x > y) ?  1 : 0));
+  };
+   
+  jQuery.fn.dataTableExt.oSort['string-case-desc'] = function(x,y) {
+    return ((x < y) ?  1 : ((x > y) ? -1 : 0));
+  };
+  
+  $(document).ready(function() {
+    $('#searchEventsTable').dataTable( {
+      "iDisplayLength": 10,
+      "aaSorting": [[ 0, "desc" ]],
+    });
+  });
+</script>
+%else:
+<h3>Found 0 matches in Events </h3>
+%endif
+%if others:
+<h3>Found ${len(others)} in Attributes</h3>
 <div style="margin-bottom:30px;margin-top:30px">
   <table class="table table-striped table-bordered table-hover table-condensed" id="rearchResultsTable">
   <thead>
@@ -15,7 +92,7 @@
   </thead>
   <tbody>
   <% counter=0%>
-  %for result in results:
+  %for result in others:
     <%
     if result.event.published == 0:
       style = 'background-color: #ff0000'
@@ -58,3 +135,6 @@ $(document).ready(function() {
   });
 });
 </script>
+%else:
+<h3>Found 0 in Attributes</h3>
+%endif
